[package]
name = "is31fl3236"
version = "0.1.1"
authors = ["Daniel Erenrich"]
edition = "2021"
description = "A rust-embedded driver for the Lumissil Microsystems IS31FL3236 LED driver"
keywords = ["embedded-hal", "driver", "is31fl3236", "lumissil"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/derenrich/is31fl3236"

[dependencies]
embedded-hal = { version = "0.2.4", features = ["unproven"] }

[features]
default = []
